--- a/buildflags/buildflags.gni
+++ b/buildflags/buildflags.gni
@@ -8,7 +8,8 @@ declare_args() {
   # Allow running Electron as a node binary.
   enable_run_as_node = true
 
-  enable_osr = true
+  # FIXME C70 upgrade
+  enable_osr = false
 
   enable_view_api = false
 
